@@ -9,7 +9,6 @@ import org.newdawn.slick.TrueTypeFont;
  * User: Egor.Smirnov
  * Date: 13.12.12
  * Time: 18:17
- * To change this template use File | Settings | File Templates.
  */
 public class GUIConstants
 {
@@ -18,4 +17,6 @@ public class GUIConstants
     public static final Color backgroundColor = new Color(4, 7, 125);
 
     public static final Font dialogFont = new TrueTypeFont(new java.awt.Font("Arial", java.awt.Font.PLAIN, 14), false);
+
+    public static final Font captionFont = new TrueTypeFont(new java.awt.Font("Arial", java.awt.Font.BOLD, 16), false);
 }
